--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="PERNANCIAL AI - Coming Soon" />
     <meta property="og:description" content="The future of financial intelligence powered by AI" />
     <meta property="og:type" content="website" />
-    <title>PERNANCIAL AI - Coming Soon</title>
+    <title>PERNANCIAL AI </title>
   </head>
   <body>
     <div id="root"></div>
